# bluechip

./: .dockerignore  .env.example  .gitignore  BCT_Hack_Brief_Extracted.txt  Dockerfile  Makefile  PLAN.md  README.md  constraints.txt  docker-compose.yml  paper.tex  pyproject.toml  render.yaml
app/: __init__.py  main.py
data/: dataset_manifest.json
docs/: FEATURE_STORE_10_PLAN.md  HANDOFF.md  IMPLEMENTATION_LOG.md  METRIC_AND_UI_IMPROVEMENT_PLAN.md  PUSH_READY.md  SCORING_RUBRIC_AND_STATUS.md  SUBMISSION_FREEZE.md  human_eval_task_a.csv  human_eval_task_a.md  human_eval_task_a_reviews.csv  human_eval_task_a_reviews.md  human_eval_task_b.csv  human_eval_task_b.md  human_eval_task_b_contextual.csv  human_eval_task_b_contextual.md
eval/: aggregate_task_b_reports.py  common.py  create_human_eval_tables.py  create_task_a_human_eval_reviews.py  create_task_b_contextual_eval.py  eval_evidence_intelligence.py  eval_implicit_baselines.py  eval_task_a.py  eval_task_a_generation.py  eval_task_b.py  export_human_eval_csv.py  metrics.py  promote_ranker.py  promote_task_a.py  report_task_b_from_row_cache.py  run_task_b_source_ablation.py  summarize_human_eval.py  task_b_context.py  train_ranker.py  train_task_a_model.py  train_task_b_ranker.py  tune_ranker.py  tune_task_a.py
infra/: production_architecture.md
paper/: recommendation_agent_paper.md  recommendation_agent_paper.tex  solution_paper.md  user_model_paper.md  user_model_paper.tex
prompts/: recommendation_reasoning.md  review_simulation.md
research/: literature_review.md
scripts/: __init__.py  build_splits.py  (+15 more)
(+112 files in other folders)
