[project]
name = "bluechip-user-intelligence-agent"
version = "0.1.0"
description = "Scalable user modeling and recommendation scaffold for the DSN x BCT LLM Agent Challenge."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sentence-transformers>=2.7.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
metrics = [
  "bert-score>=0.3.13",
]
baselines = [
  "implicit>=0.7.3",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "eval*", "scripts*"]
